Fixed last preview slide visibility

--- a/browser/css/partsPreviewControl.css
+++ b/browser/css/partsPreviewControl.css
@@ -3,7 +3,7 @@
 	overflow-x: hidden;
 	overflow-y: visible;
 	background: var(--color-background-lighter);
-	max-height: 100%;
+	max-height: 95%;
 	scrollbar-color: var(--color-background-darker) var(--color-background-lighter);
 	scrollbar-width: thin;
 }
